Fixed LaRCSim matrix computation routines.
There was a couple of typos in the routine. This code will be used by the AI wake feature.
Also added a test for the matrix code to make sure they will be no regression.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -109,3 +109,7 @@ endmacro()
 
 flightgear_test(test_navs test_navaids2.cxx)
 flightgear_test(test_flightplan test_flightplan.cxx)
+
+add_executable(test_ls_matrix test_ls_matrix.cxx ${CMAKE_SOURCE_DIR}/src/FDM/LaRCsim/ls_matrix.c)
+target_link_libraries(test_ls_matrix SimGearCore)
+add_test(test_ls_matrix ${EXECUTABLE_OUTPUT_PATH}/test_ls_matrix)
