Compile AI wake numerical core in FG main executable.
AI wake code is still dead code except that it is now compiled with FG.

Input data for wake computations are extracted from the performance database. The data must be specified as follows (values are for illustration only) :
<geometry>
  <wing>
    <span-ft> 100. </span-ft>
    <chord-ft> 12. <chord-ft>
  </wing>
  <weight-lbs> 90000. </weight-lbs>
</geometry>

--- a/src/FDM/CMakeLists.txt
+++ b/src/FDM/CMakeLists.txt
@@ -112,7 +112,6 @@ set(LARCSIM_SOURCES
     ls_gravity.c
     ls_init.c
     ls_interface.c
-    ls_matrix.c
     ls_model.c
     ls_step.c
     navion_aero.c
@@ -136,6 +135,11 @@ set(SOURCES
 	${SP_FDM_SOURCES}
 	ExternalNet/ExternalNet.cxx
 	ExternalPipe/ExternalPipe.cxx
+        AIWake/AircraftMesh.cxx
+        AIWake/WakeMesh.cxx
+        AIWake/AeroElement.cxx
+        AIWake/AIWakeGroup.cxx
+        LaRCsim/ls_matrix.c
 	)
 
 if(ENABLE_UIUC_MODEL)
