--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,7 +232,7 @@ include( ConfigureMsvc3rdParty )
 if(EVENT_INPUT)
     if(APPLE)
       add_definitions(-DWITH_EVENTINPUT)
-    elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    elseif(CMAKE_SYSTEM_NAME MATCHES "Linux|FreeBSD")
         if(NOT UDEV_FOUND)
             message(WARNING "UDev not found, event input is disabled!")
             set(EVENT_INPUT 0)
