Use FGData embedded resources in FlightGear
This commit adds FGData embedded resources to the
EmbeddedResourceManager at FG startup (fgMainInit()). The generated
files FGData-resources.cxx and FGData-resources.hxx must be present in
src/EmbeddedResources inside this repository in order for this to work
(done in the previous commit). They are assumed to be always available.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
     screensaver_control.cxx
 	${RESOURCE_FILE}
 	${CMAKE_BINARY_DIR}/src/EmbeddedResources/FlightGear-resources.cxx
+	${CMAKE_SOURCE_DIR}/src/EmbeddedResources/FGData-resources.cxx
 	)
 
 set(HEADERS
@@ -42,6 +43,7 @@ set(HEADERS
     AircraftDirVisitorBase.hxx
     screensaver_control.hxx
     ${CMAKE_BINARY_DIR}/src/EmbeddedResources/FlightGear-resources.hxx
+    ${CMAKE_SOURCE_DIR}/src/EmbeddedResources/FGData-resources.hxx
 	)
 
 # On Windows, make sure fgrcc can be run (it needs third-party libraries)
